@@ -1,1 +1,9 @@
 # small-spring
+
+添加 JVM 参数(从JDK1.8换到JDK17)
+
+```shell
+--add-opens java.base/java.lang=ALL-UNNAMED
+```
+
+
